[tool.poetry]
name = "blog"
version = "1.0.0"
description = "Blog - Project example for FastApi project"
authors = ["Eliyahu.Maor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.4"
prometheus-fastapi-instrumentator = "^7.0.0"
email-validator = "^2.0"
debugpy = "^1.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
